--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "OpenADM",
-    "description": "OpenAdm是一个基于Yii2的后台开源骨架，集成了用户和插件系统,使用主题功能,默认使用AdminLTE2的模板的主题,可以非常方便的开发新的功能。",
+    "name": "Diplom",
+    "description": "My diplom",
     "keywords": ["yii2", "framework", "openadm","openadmin","admin","adminlte"],
     "homepage": "http://www.openadm.com/",
     "type": "project",
