--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,6 +1,6 @@
- RewriteEngine on
- # If a directory or a file exists, use the request directly
- RewriteCond %{REQUEST_FILENAME} !-f
- RewriteCond %{REQUEST_FILENAME} !-d
- # Otherwise forward the request to index.php
- RewriteRule . index.php
+Options +FollowSymLinks
+IndexIgnore */*
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . index.php
