--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
       "dmstr/yii2-adminlte-asset":"2.*",
       "kucha/ueditor": "*",
       "intervention/image": "^2.3",
-      "voime/yii2-google-maps": "*"
+      "voime/yii2-google-maps": "*",
+        "mihaildev/yii2-ckeditor": "*"
     },
     "require-dev": {
       "yiisoft/yii2-debug": "~2.0.0",
